# raytracing_cpp

./: .gitignore  CMakeLists.txt  README.md
MyRaytracing/MyRaytracing/: camera.h  hitable.h  hitable_list.h  main.cpp  material.h  ray.h  sphere.h
MyRaytracing/MyRaytracing.xcodeproj/: project.pbxproj
MyRaytracing/MyRaytracing.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MyRaytracing/MyRaytracing.xcodeproj/xcshareddata/xcschemes/: MyRaytracing.xcscheme
include/: camera.h  hitable.h  hitable_list.h  material.h  ray.h  sphere.h  vec3.h
src/: main.cpp
test/: main.test.cpp
